--- a/gb/19/12/31/n11757226.md
+++ b/gb/19/12/31/n11757226.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ublsmv3253/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ublsmv3253/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ublsmv3253/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ublsmv3253/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ublsmv3253/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ublsmv3253/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>感受奇妙能量 功夫学院老板盛赞神韵</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/1912310132582124-600x400.jpg" />
 <h6>2019年12月30日，功夫学院老板阿塔里克先生（Rob Atalick）在加拿大汉密尔顿观看神韵演出后，称自己感受到了“一种奇妙的能量”。（周月谛／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2019年12月31日讯】（大纪元加拿大汉密尔顿记者站报导）2019年12月30日，<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在加拿大汉密尔顿福斯特安大略<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>厅 （FirstOntario Concert Hall）的首场演出，给现场观众留下了深刻印象。功夫学院老板阿塔里克先生（Rob Atalick）表示，他感受到了“一种奇妙的<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>”，这种能量令人愉快。</p>
-<p>阿塔里克和他学院的一些教师一起来观看了<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出。他说，神韵演出给他们留下了很深刻的印象，“演出很美，是一次美妙的经历”。</p>
-<p>“演员很出色，舞蹈技巧精湛高超，你可以看出，他们付出了如此大的努力。” 阿塔里克说，演员呈现了一场“美丽的演出”，他自己感受到了“一种奇妙的<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>”。</p>
-<p>阿塔里克表示，很喜欢神韵乐团的<ahref="https://github.com/ublsmv3253/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>，能感受到这些音乐的感染力及所表现的情感。“你可以感受到，这些从乐器中流淌出的能量很奇妙，使人愉快。”</p>
+	<p>【大纪元2019年12月31日讯】（大纪元加拿大汉密尔顿记者站报导）2019年12月30日，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团在加拿大汉密尔顿福斯特安大略<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>厅 （FirstOntario Concert Hall）的首场演出，给现场观众留下了深刻印象。功夫学院老板阿塔里克先生（Rob Atalick）表示，他感受到了“一种奇妙的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>”，这种能量令人愉快。</p>
+<p>阿塔里克和他学院的一些教师一起来观看了<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出。他说，神韵演出给他们留下了很深刻的印象，“演出很美，是一次美妙的经历”。</p>
+<p>“演员很出色，舞蹈技巧精湛高超，你可以看出，他们付出了如此大的努力。” 阿塔里克说，演员呈现了一场“美丽的演出”，他自己感受到了“一种奇妙的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>”。</p>
+<p>阿塔里克表示，很喜欢神韵乐团的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>，能感受到这些音乐的感染力及所表现的情感。“你可以感受到，这些从乐器中流淌出的能量很奇妙，使人愉快。”</p>
 <p>神韵演出所呈现的文化，触动了阿塔里克。他说：“神韵的服装代表了不同的朝代，不同的地区，妙极了！能欣赏到所有这些服装 ，很高兴。”</p>
 <p>他说，演员的动作不只是普通的舞蹈，还有像翻腾那样的动作，他明白了这些是中国传统古典舞的一部分，“很高兴看到这些”。</p>
 <p>节目中表现道家师父选徒弟的情节，使阿塔里克印象深刻。他说，他所理解的生活也是这样的，即使不会总能看到前方的路，但是，当对师父有信心，在你开始付诸行动后，“前方的路可能就会自己显露出来，但你必须一开始就得有相信师父的信念”。</p>
@@ -21,43 +21,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11752848.md#1">神韵演出表现力惊人 语言病理学家感受快乐</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11752916.md#1">诗人获心灵提升 赞誉神韵值得世人永远称颂</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11752959.md#1">奇妙无比精美绝伦 咨询顾问要把神韵带回家</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11752970.md#1">神韵渥太华四场全爆满 教授吁结束中共迫害</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11753061.md#1">总想再多看一些 公司老板夫妇着迷于神韵</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/12/29/n11753094.md#1">神韵是必看的演出 IT经理：千万不要错过</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752848.md#1">神韵演出表现力惊人 语言病理学家感受快乐</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752916.md#1">诗人获心灵提升 赞誉神韵值得世人永远称颂</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752959.md#1">奇妙无比精美绝伦 咨询顾问要把神韵带回家</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11752970.md#1">神韵渥太华四场全爆满 教授吁结束中共迫害</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11753061.md#1">总想再多看一些 公司老板夫妇着迷于神韵</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/12/29/n11753094.md#1">神韵是必看的演出 IT经理：千万不要错过</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/29/n11148175.md#1" target="_blank">共产暴政录：印尼排华暴乱事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965703.md#1" target="_blank">共产暴政录：广西文革大屠杀事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/10/n12745735.md#1">【解密时分】教宗预言：末日审判将近？</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/8/n12741216.md#1">【解密时分】诺查丹玛斯预言苏共或中共政权？</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/5/n12734415.md#1">中国新年：回溯辛丑三百年 危难中寻曙光</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/10/n12745122.md#1">【十字路口】飞碟真的存在？轻生真能解脱？</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/6/n12736643.md#1">“福”字真能招来福气吗？这样贴才有用！</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/15/12/18/n4599243.md#1">散文：唐诗里的雪</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751208.md#1">【时事军事】习视察的新电战机 生存机会近乎零</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/9/n12741687.md#1">【思想领袖】林赛：列宁主义4.0美国上演？</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751438.md#1">新年公开戏谑习近平 大陆两网民失联</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751224.md#1">央视春晚又现涂黑脸表演 再次恶评如潮</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751193.md#1">【重播】二次弹劾 参院判川普无罪</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751495.md#1">孙俪着大红花袄拜年 与邓超甜蜜牵手秀恩爱</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12751300.md#1">不擅唱跳紧张到哭 53岁那英参加选秀节目惹议</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12750216.md#1">睽违6年回家围炉 龙千玉发送60个红包迎好运</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/14/n12752824.md#1">初二回不了娘家直呼想妈 杨丞琳感念别样孝顺</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/13/n12750168.md#1">小甜甜初一直播陪过年 挺孕肚与黄尹宣齐露脸</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/14/n12751941.md#1">BMW如何发音？ 英国调查：95%的人都念错</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/11/n12746160.md#1">黑巧克力降血压、提升好胆固醇又提神 2种最健康</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/14/n12751851.md#1">土耳其男子救了一只天鹅 两者维持友谊37年</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/15/n12753746.md#1">只有公共电话亭的大小 日本胶囊办公室兴起</a></li>
-<li><a href="https://github.com/ublsmv3253/djy/blob/master/gb/21/2/15/n12753639.md#1">太空人拍到秘鲁的“黄金之河” 闪闪发光</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ublsmv3253/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ublsmv3253/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11757226.htm">感受奇妙能量 功夫学院老板盛赞神韵</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/31/n11757226.htm">感受奇妙能量 功夫学院老板盛赞神韵</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ublsmv3253/djy/blob/master/gb/19/12/31/n11757226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ublsmv3253/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ublsmv3253/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublsmv3253/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublsmv3253/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublsmv3253/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/12/31/n11757226.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
